fixes for location dropdown and various IE fixes (including some z-index bug fixes)
git-svn-id: http://svn.localprojects.net/gam2/trunk@478 befef031-aaeb-48d0-b70f-681328309d3d

--- a/static/css/ie/tc.gam.ie.css
+++ b/static/css/ie/tc.gam.ie.css
@@ -12,6 +12,7 @@ input[type=button].rounded-button,
 input[type=submit].rounded-button { float:none; display:block; height: 42px; padding-bottom: 0px; }
 div.seafloor input.ft-search-btn { padding-top: 0; padding-bottom:0; }
 
+ul.navbar li.search input[type=text] { padding-top: 6px; padding-bottom: 4px; }
 ul.navbar li.search input[type=submit] { height: 27px; padding-bottom: 0; }
 
 
@@ -42,7 +43,7 @@ div.continent.home .headlands .splash .projects-pane.not-found {							/* 70% tr
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#b2ffffff, endColorstr=#b2ffffff) !important; /* For < IE 8 */
 	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#b2ffffff, endColorstr=#b2ffffff)" !important; /* For IE 8*/ }
 
-
+div.continent.home .headlands .splash .projects-pane h2 .text  { background: url(../../images/white_70.png) top center repeat transparent; }
 
 
 
@@ -51,7 +52,7 @@ div.continent.home .headlands .splash .projects-pane.not-found {							/* 70% tr
 PAGE-SPECIFIC STYLES */
 
 /* home page */
-
+div.continent.home .headlands .splash  .projects-pane h2 span.text { padding-top: 3px; padding-bottom: 2px; }
 
 /* search results page */
 .continent.search-results #list-view .sidebar .sidebar-item { padding-top: 4px; padding-bottom: 3px; }
@@ -59,5 +60,5 @@ PAGE-SPECIFIC STYLES */
 .continent.search-results #list-view .sidebar .sidebar-item span.counter { top: -1px; }
 .continent.search-results table { padding:0; width: 100%; }
 .continent.search-results .results-box .bd { padding:20px; }
-.continent.search-results .headlands input[type='text'] { padding-top: 5px; padding-bottom: 0px; }
+.continent.search-results .headlands input[type='text'] { padding-top: 8px !important; padding-bottom: 2px !important; }
 .continent.search-results div.location-hood-list { left: 390px; margin-left: 1px; }
